<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="MotorProxy" Id="{a2530ad0-d917-4620-93b7-998ff4a77811}">
    <Declaration><![CDATA[TYPE MotorProxy :
STRUCT
	motorPtr: POINTER TO Motor;
	IsAxisSelected: BOOL;
	flagOne: BOOL;
	encoder: REAL;
	status: AxisStatus;
END_STRUCT


END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>