<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="TransferMotorDataToProxy" Id="{a81a26a7-a9c2-4643-a97f-52109abaf75f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION TransferMotorDataToProxy : BOOL
VAR_INPUT
	mp: POINTER TO MotorProxy;
	
END_VAR
VAR
	
	prox: MotorProxy;
	moto: Motor;



END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
	
	prox := mp^;
	mp := prox.motorPtr^;
	
	prox.encoder := moto.encoder;
	prox.IsAxisSelected := moto.isAxisSelected;
	prox.status := moto.status;
	
	






]]></ST>
    </Implementation>
    <LineIds Name="TransferMotorDataToProxy">
      <LineId Id="16" Count="1" />
      <LineId Id="23" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="31" Count="1" />
      <LineId Id="30" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="18" Count="4" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>